fix: add base test suite

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,14 +7,9 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/naming-convention": [
-      "warn",
-      {
-        "selector": "import",
-        "format": ["camelCase", "PascalCase"]
-      }
-    ],
+    "@typescript-eslint/naming-convention": "warn",
     "@typescript-eslint/semi": "warn",
+    "prefer-const": "error",
     "curly": "warn",
     "eqeqeq": "warn",
     "no-throw-literal": "warn",
