--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "testing-dev-vsce",
   "displayName": "testing-dev-vsce",
   "description": "Helper extension for executing testing",
+  "publisher": "jgfranco",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.92.0"
@@ -36,14 +37,28 @@
     "package": "vsce package --baseContentUrl $(jq -r .repository.url package.json) --baseImagesUrl $(jq -r .repository.url package.json) --out testing-dev-vsce.vsix"
   },
   "devDependencies": {
-    "@types/vscode": "^1.92.0",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "18.x",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
+    "@types/chai": "^4.3.5",
+    "@types/glob": "^8.1.0",
+    "@types/glob-to-regexp": "^0.4.1",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.2.5",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.16",
+    "@types/tar-stream": "^2.2.2",
+    "@types/temp": "^0.9.1",
+    "@types/vscode": "^1.81.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.4.1",
+    "@vscode/vsce": "^2.20.1",
     "eslint": "^8.57.0",
     "typescript": "^5.3.3",
-    "@vscode/test-cli": "^0.0.8",
-    "@vscode/test-electron": "^2.3.9"
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "sinon": "^15.2.0"
+  },
+  "dependencies": {
+    "glob-to-regexp": "^0.4.1",
+    "tar-stream": "^3.1.6"
   }
 }
